--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "task1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://virajSingh19.github.io/groceryStore",
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "gh-pages": "^2.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
@@ -15,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
