--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "task1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://virajsingh19.github.io/groceryStore",
+  "homepage": ".",
   "dependencies": {
     "font-awesome": "^4.7.0",
     "gh-pages": "^2.1.1",
@@ -18,8 +18,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
